# c_FileTypeSigModule

./: FileTypeModule.cpp  Makefile.am  NEWS.txt  README.md  README.txt  configure.ac
win32/: FileTypeSigModule.sln  FileTypeSigModule.vcproj  FileTypeSigModule.vcxproj  FileTypeSigModule.vcxproj.filters
